# data-science-portfolio

./: .gitignore  README.md  project-proposal.md  pyproject.toml
notebooks/: boston_marathon_dates.csv  marathon-pace.ipynb  nouns.json  stock-trading.ipynb  word-game.ipynb
trading/: logger.py  trader.py
